DEX-24374 | fix: tags alignment inside product cards

--- a/_src-lp/blocks/new-prod-boxes/new-prod-boxes.css
+++ b/_src-lp/blocks/new-prod-boxes/new-prod-boxes.css
@@ -273,6 +273,10 @@
   min-height: 2rem;
 }
 
+.new-prod-boxes-container .tag-subtitle {
+  align-content: end;
+}
+
 .new-prod-boxes-container.flex-height .tag-subtitle {
   min-height: 80px;
   display: flex;
